@@ -14,7 +14,7 @@ import net.sf.ehcache.config.MemoryUnit;
 
 /**
  * test cache performance ,for encache test set  VM param  -server -Xms1100M -Xmx1100M
- * for mapdb set vm param -server -Xms100M -Xmx100M -XX:MaxPermSize=1G
+ * for mapdb set vm param -server -Xms100M -Xmx100M
  */
 
 public class TestCachePoolPerformance {
